# alinea

./: .env.example  .gitignore  .gitmodules  .prettierignore  README.md  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json  turbo.json  論文読解システム デザイン.dc.html
apps/api/: alembic.ini  package.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_llm_routing_tables.py  0003_latex_project_manifest.py  0004_translated_pdf_assets.py  0005_article_variants.py  0006_translation_set_plan.py  0007_job_request_key_index.py  0008_job_waiting_input.py  0009_user_scoped_active_ingest.py  0010_import_job_kind.py  0010_vocab_candidates.py  0011_easy_translation_style.py  0011_vocab_candidates.py  0012_easy_translation_style.py  0013_paper_export_job_kind.py  0014_paper_external_ids.py  0015_article_publications.py  0016_jats_source_format.py  0016_publication_comments.py  0016_semantic_embeddings.py  0017_publication_comments.py  0018_presentation_artifacts.py  0019_jats_source_format.py  0020_code_analysis.py  0021_huggingface_resources.py
apps/api/scripts/: dev.sh  seed_user_acceptance.py
apps/api/src/alinea_api/: __init__.py  deps.py  errors.py  export_openapi.py  logging.py  main.py  middleware.py  ratelimit.py  redis_client.py  search_semantic.py  seed.py  settings.py
apps/api/src/yakudoku_api/: __init__.py  deps.py  errors.py  export_openapi.py  (+8 more)
apps/api/tests/: conftest.py  factories.py  test_adopt_revision.py  test_annotations.py  test_api_coverage.py  test_articles.py  test_auth.py  test_chat.py  test_code_analysis.py  test_code_analysis_api.py  test_collections.py  test_dashboard.py  test_db_constraints.py  test_easy_style.py  test_export.py  test_figures_api.py  test_finish_flow.py  test_glossary.py  test_import_api.py  test_ingest_api.py  test_ingest_pdf.py  test_jobs.py  test_library_api.py  test_library_filters.py  test_literal_style.py  test_llm_settings.py  test_llm_smoke_chat.py  test_long_paper_section_selection_api.py  test_middleware.py  test_notes.py  test_notifications.py  test_oauth.py  test_platform.py  test_presentations.py  test_publication_comments.py  test_publications.py  test_reading_sessions.py  test_reading_sessions_service.py  test_resources.py  test_retranslate.py  (+14 more)
apps/worker/: package.json  pyproject.toml
apps/worker/scripts/: dev.sh
apps/worker/tests/: _summary_contract.py  conftest.py  test_analyze_code.py  test_bootstrap.py  test_cron_deadline_reminders.py  test_cron_quality_promotions.py  test_easy_reason.py  test_export_bulk.py  test_export_paper.py  test_extract_vocab_candidates.py  test_fetch_resource_meta.py  test_figure_assets.py  test_generate_article.py  test_generate_explainer_figure.py  test_generate_overview_figure.py  test_generate_presentation.py  test_generate_vocab_ai.py  test_import_bulk.py  test_index_embeddings.py  test_ingest.py  test_latex_pdf.py  test_latex_priority_pipeline.py  test_llm_smoke_explainer_figure.py  test_notify.py  test_pdf_ocr_candidate.py  test_pdf_ocr_scan_figures.py  test_pdf_upload_pipeline.py  test_ppt_master_adapter.py  test_presentation_source_packet.py  test_reingest_adopt_and_sse.py  test_site_ingest_pipeline.py  test_structured_pdf.py  test_summary_contract.py  test_svg_ppt_flatten.py  test_translate_units.py  test_user_route_per_job.py
(+834 files in other folders)
