[project]
name = "alinea-workspace"
version = "0.1.0"
requires-python = "==3.12.*"
description = "Alinea — 論文読解ワークベンチ (uv workspace root)"

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "packages/py-core", "packages/llm", "packages/figures"]

[tool.uv.sources]
alinea-core = { workspace = true }
alinea-llm = { workspace = true }
alinea-figures = { workspace = true }

[dependency-groups]
dev = [
  "ruff==0.12.2",
  "mypy==1.16.1",
  "pytest==8.4.1",
  "pytest-asyncio==1.0.0",
  "hypothesis==6.135.26",
  "pytest-cov>=5.0.0",
  "httpx==0.28.1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "ASYNC", "S", "RUF"]
ignore = ["S101"]

[tool.ruff.lint.per-file-ignores]
# tests は SQL リテラルが長くなりがちで、assert(S101)も使う
"**/tests/**" = ["S", "E501"]
# Alembic マイグレーションは verbatim SQL(plans/02 §4)を持つため行長チェック対象外
"**/alembic/versions/**" = ["E501"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

# 型スタブを提供しないサードパーティ(aioboto3/botocore 等)は import 追跡を無視する
[[tool.mypy.overrides]]
module = ["aioboto3.*", "botocore.*", "selectolax.*", "xxhash.*", "fitz.*", "pdfplumber.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["packages", "apps"]
