[project]
name = "yakudoku-api"
version = "0.1.0"
description = "訳読 / YAKUDOKU — FastAPI バックエンド"
requires-python = "==3.12.*"
dependencies = [
  "yakudoku-core",
  "yakudoku-llm",
  "fastapi==0.115.14",
  "uvicorn[standard]==0.35.0",
  "sqlalchemy[asyncio]==2.0.41",
  "asyncpg==0.30.0",
  "alembic==1.16.2",
  "pydantic==2.11.7",
  "pydantic-settings==2.10.1",
  "authlib==1.6.0",
  "httpx==0.28.1",
  "cryptography==45.0.5",
  "redis>=5.0.0",
  "arq==0.26.3",
  "structlog>=24.0.0",
  "itsdangerous>=2.2.0",
  "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yakudoku_api"]
